# blog-app

./: .gitignore  pyproject.toml
assets/data/: posts.json
backend/authentication/: serializers.py  views.py
backend/authors/api/: urls.py
backend/authors/api/v1/: serializers.py
backend/categories/: models.py
backend/categories/api/: urls.py
backend/categories/api/v1/: serializers.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/posts/: models.py  signals.py
backend/posts/api/: urls.py
backend/posts/api/v1/: filters.py  serializers.py  urls.py  views.py
backend/posts/management/commands/: seed_posts.py
backend/posts/migrations/: 0001_initial.py  0002_alter_post_published.py  0003_alter_post_published.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/components/Container/: index.tsx
frontend/src/components/ErrorMessage/: index.tsx
frontend/src/components/FeaturedPost/: index.tsx
frontend/src/components/Footer/: index.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/PostCoverImage/: index.tsx
frontend/src/components/PostDate/: index.tsx
frontend/src/components/PostHeading/: index.tsx
frontend/src/components/PostSummary/: index.tsx
frontend/src/components/PostsList/: index.tsx
frontend/src/components/SafeMarkdown/: index.tsx
frontend/src/components/SinglePost/: index.tsx
frontend/src/config/: api.ts  mount-posts-url.ts
frontend/src/lib/post/: queries.ts
(+8 files in other folders)
